@@ -813,6 +813,8 @@ debug_what=Events to log
 debug_what_start=Scripts starting and stopping
 debug_what_write=Files opened for writing
 debug_what_read=Files opened for reading
+debug_what_ops=Other file operations
+debug_what_procs=Operations on processes
 debug_what_diff=Configuration file diffs
 debug_what_cmd=Commands executed
 debug_what_net=Network connections made
@@ -824,3 +826,7 @@ debug_ewhat=No events to log selected
 debug_efile=Debug log file must be an absolute path
 debug_edir=Directory '$1' for debug log file does not exist
 debug_esize=Maximum size must be a number
+debug_procs=Script types to debug
+debug_web=Web interface CGIs
+debug_cmd=Command line
+debug_cron=Background jobs
