@@ -95,3 +95,4 @@ MD5 encryption for Webmin and Unix passwords can be used on systems that have ei
 ---- Changes since 1.410 ----
 Many Korean updates, thanks to JoungKyun Kim.
 More Dutch updates, thanks to Gandyman.
+Added a debugging log file, which records all files read and written, commands run and more. This can be enabled in the Webmin Configuration module.
